# Meta_hackathon

./: .env.example  .gitignore  ContractEnv_IPO_Training.ipynb  ContractEnv_IPO_Training_Executed.ipynb  Dockerfile  Dockerfile.combined  README.md  generate_pdfs.py  inference.py  nginx.conf  plot_rewards.py  print_summary.py  pyproject.toml  requirements.txt  results.json  run_training_only.py  start.sh  test_dump.txt  test_edge_cases.py  train.py  training_log.json
environment/: agent_runner.py  counterparty.py  dual_env.py  env.py  main.py  models.py
environment/contracts/: __init__.py  edge_case_templates.py  nda_template.py  product_sales_template.py
environment/database/: __init__.py  connection.py  documents.py  migrations.py  repositories.py
environment/graders/: __init__.py  task1_grader.py  task2_grader.py  task3_grader.py
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/app/: layout.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/demo/: page.tsx
frontend/src/app/negotiate/: page.tsx
frontend/src/components/: NegotiatePanel.tsx
frontend/src/components/negotiation/: ChatBubble.tsx  ConstraintBuilder.tsx  DocumentUploader.tsx
frontend/src/components/session/: InterventionModal.tsx
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
mock_data/: HOW_TO_TEST.md  client_financials.txt  client_ip_assignment.txt  nda_contract.txt  seller_cap_table.txt  seller_due_diligence.txt  seller_financials.txt
server/: app.py
tests/: test_api.py  test_database.py  test_graders.py
(+5 files in other folders)
