[project]
name = "contractenv"
version = "0.1.0"
description = "Contract Environment for OpenEnv Hackathon"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]

[project.scripts]
server = "server.app:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"
